<?xml version="1.0"?>
<package>
  <name>heimdall_notification</name>
  <version>1.0.0</version>
  <description>Sends notifications using SMS and email</description>
  <maintainer email="info@heimdall-sensor.org">Enacer</maintainer>
  <license>AGPL-3.0</license>
  <url type="website">http://www.heimdall-sensor.org/</url>
  <author>Egbert van der Wal</author>
  <author>Christof Oost</author>
  <author>Ron Snijders</author>
  <author>Amir Shantia</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>curl</build_depend>
  <build_depend>heimdall_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>curl</run_depend>
  <run_depend>heimdall_msgs</run_depend>

  <export>
  </export>
</package>
